--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
   --button-background: #f5f4fa;
   --header-border: #ececec;
   --icon-color: #afb1b8;
+  --background-card-color: rgba(33, 150, 243, 0.9);
   --time-animation: 250ms;
   --time-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -91,6 +92,20 @@ header {
 }
 .main-nav .activity {
   color: var(--accent-text-color);
+}
+.activity {
+  position: relative;
+}
+.activity::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 4px;
+  width: 100%;
+  border-radius: 2px;
+
+  background-color: var(--accent-text-color);
 }
 .main-nav a:hover,
 .main-nav a:focus,
@@ -304,9 +319,32 @@ header {
   margin-bottom: 0;
   padding-left: 0;
 }
+.title-list img {
+  display: block;
+}
 .title-list {
+  position: relative;
+
   flex-basis: calc((100% -60px) / 3);
   margin-right: 30px;
+}
+.desckription {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  display: flex;
+
+
+  width: 100%;
+  height: 70px;
+
+  justify-content: center;
+  align-items: center;
+
+  background: rgba(47, 48, 58, 0.8);
+  font-weight: 700;
+  text-transform: uppercase;
+  color: var(--additional-text-color);
 }
 .social-icon {
   display: flex;
@@ -505,34 +543,130 @@ footer {
   line-height: 2;
   letter-spacing: 0.06em;
 }
-.examples p {
+.border-box p {
   margin-top: 0;
   margin-bottom: 0;
 
   font-size: 16px;
   line-height: 1.88;
 }
+.card {
+  position: relative;
+  overflow: hidden;
+}
 .portfolio-list img {
   display: block;
 }
+.portfolio-list-description {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+
+  padding: 63px 24px;
+
+  background-color: var(--background-card-color);
+  font-size: 18px;
+  line-height: 1.56;
+  color: var(--additional-text-color);
+  
+  transform: translateY(100%);
+
+  transition: transform var(--time-animation) var(--time-function);
+
+}
+.portfolio-list-description p{
+  margin: 0;
+}
+
+
 .border-box {
   display: block;
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: transparent;
 }
-.portfolio-list a {
-  transition: border-top var(--time-animation) var(--time-function),
-    box-shadow var(--time-animation) var(--time-function);
-}
-.portfolio-list a:hover,
-.portfolio-list a:focus {
-  border-top: #eeeeee;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
 .portfolio-list-box {
   display: block;
   /* border: 1px solid #EEEEEE; */
   max-width: 370px;
+
+  transition: border-top var(--time-animation) var(--time-function),
+    box-shadow var(--time-animation) var(--time-function);
+}
+.portfolio-list-box:hover,
+.portfolio-list-box:focus {
+  border-top: #eeeeee;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.portfolio-list-box:hover .portfolio-list-description,
+.portfolio-list-box:focus .portfolio-list-description {
+  transform: translateY(0);
+}
+
+/* Модальне вікно */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  
+  background: rgba(0, 0, 0, 0.2);
+
+  opacity: 1;
+  transition: opacity var(--time-animation) var(--time-function);
+  
+}
+.backdrop.is-hidden {
+  pointer-events: none;
+  opacity: 0;
+
+}
+.backdrop.is-hidden .modal {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.5);
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+
+  display: flex;
+  justify-content: right;
+
+  width: 528px;
+  height: 581px;
+
+  background-color: var(--additional-text-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+  transition: transform var(--time-animation) var(--time-function);
+}
+
+.button-close {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  padding: 0;
+  border: 0;
+  margin-top: 8px;
+  margin-right: 8px;
+
+  cursor: pointer;
+
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--main-background-color);
+
+}
+.icon-close {
+  fill: var(--header-logo-color);
 }
